# SUST-Cpp-course

./: .gitignore  README.md
lab02/: hello  hello.cpp  store  store.cpp
lab03/Exe02/: fib.cpp  practice.cpp  print_hello.cpp
lab03/Exe02-makefile and make/: Makefile
lab03/exa01/: area.c  area.h  main  main.c
lab03/exa02/: factorial.cpp  function.h  main.cpp  printinfo.cpp  testfile
lab04/: a.out  c_a_demo.c  c_in_demo.c  c_in_dfc_format_demo.c  char-array vs string-array  char-array vs string-array.cpp  cin_out.cpp  data-store  data-store.cpp  string_input.cpp  struct  struct.cpp  union  union.cpp
lab04/Exe02/: sizeof.cpp
lab04/Exe03/: p2.c
lab04/Exe04/: Day-Weather.cpp
lab04/lab/: CMakeLists.txt
lab05/: dangling_pointer.c  demo.c  demo1.c  demo2.c  edian.cpp  free_less.c  free_more.c  memory_leak.c  stack.c  wild_pointer.c
lab05/Exe01/: code.cpp
lab05/Exe02/: code.cpp
lab05/Exe03/: Code.cpp
lab06/: fdemo3-arm64.s  fdemo3-risc-v64.s  fdemo3-x64.s  fdemo3.c  fdemo3_ptr-arm64.s  fdemo3_ptr-risc-v64.s  fdemo3_ptr-x64.s  fdemo3_ptr.c  test.cpp
lab06/CMakeDemo4/: CMakeLists.txt
lab06/CMakeDemo4/lib/: CMakeLists.txt
lab06/Exe01/: lab.cpp
lab06/Exe02/: Makefile
lab06/staticlibmakefile/: fun.h  min.c
lab06/staticlibmakefile02/: CompileError.md  (+2 more)
lab07/: Exe02.cpp  mymath.c  mymath.h  p2_demo1.c  test_function.cpp
lab08/: CMakeLists.txt  lab08_exercise.cpp  matoperation.cpp
lab08/python-file/: Flow Control-for.py  Flow Control-if.py  Flow Control-while.py  demo1.py  demo2.py  demo3.py  demo4.py  fibs.py
lab09/: Box.cpp  Box.h  complex.cpp  const_member.cpp  const_member.h  demo1-cpp.cpp  demo1-python.py  demo2.py  main.cpp  static_member.cpp  static_member.h
lab10/: Complex.cpp  MyTime.cpp  MyTime.py  circle.cpp  circle.h  complex.h  explicit_circle.cpp  explicit_circle.h  rational.cpp  rational.h
lab11/: Operator_overloading.cpp  String.cpp  String.h  main.cpp  ptrHardCopy.cpp  ptrSoftCopy.cpp  shared_ptr.cpp  smartPoint.cpp  unique_ptr.cpp
lab12/: duck_type.py  employee_destructor2.cpp
lab13/: Specialization1.cpp  Specialization2.cpp  Template2.cpp  Template3.cpp  has-a.cpp
(+74 files in other folders)
